<resources>
    <string name="app_name">tarea_1</string>
    <string name="bt_formularios_text">FORMULARIOS</string>
    <string name="bt_calculadora_text">CALCULADORA</string>
    <string name="bt_salir_text">SALIR</string>
    <string name="mv_bt_inicio_sesion_text">INICIAR SESIOIN</string>
    <string name="mv_tv_title_text">BIENVENIDO</string>
    <string name="mv_bt_cine_text">CINE</string>

    <string name="bt_crear_formulario_text">CREAR FORMULARIO</string>
    <string name="bt_editar_formulario_text">BUSCAR FORMULARIO</string>
    <string name="edt_editar_formulario_hint_text">(ID editar o buscar)</string>
    <string name="bt_fm_ver_lista_text">LISTA DE USUARIOS</string>
    <string name="bt_fm_salir_text">SALIR Y GUARDAR</string>


    <string name="tv_ef_informacion_basica_text">INFORMACIÓN BÁSICA</string>
    <string name="edt_ef_nombre_text">NOMBRE</string>
    <string name="edt_ef_apellido_text">APELLIDO</string>
    <string name="edt_ef_edad_text">EDAD</string>
    <string name="tv_ef_informacion_contacto_text">INFORMACIÓN DE CONTACTO</string>
    <string name="edt_ef_correo_text">CORREO ELECTRÓNICO</string>
    <string name="edt_ef_telefono_text">NÚMERO DE TELEFONO</string>
    <string name="tv_ef_informacion_direccion_text">DIRECCIÓN</string>
    <string name="edt_ef_direccion_text">TU DIRECCIÓN</string>
    <string name="tv_ef_informacion_identidad_text">IDENTIDAD</string>
    <string name="edt_ef_tipo_doc_text">CC</string>
    <string name="edt_ef_numero_doc_text">NÚMERO DE DOCUMENTO</string>
    <string name="tv_ef_informacion_adicional_text">INFORMACIÓN ADICIONAL</string>
    <string name="tv_ef_sexo_text">SEXO</string>
    <string name="rb_hombre_text">HOMBRE</string>
    <string name="rb_mujer_text">MUJER</string>
    <string name="rb_otro_text">OTRO</string>
    <string name="rb_no_decir_text">PREFIERO NO DECIR</string>
    <string name="tv_ef_estado_civil_text">ESTADO CIVIL</string>

    <string name="tv_ef_informacion_academica_text">INFORMACIÓN ACADÉMICA</string>
    <string name="edt_ef_institucion_texto">NOMBRE DE LA INSTITUCIÓN</string>
    <string name="edt_ef_carrera_texto">CARRERA</string>
    <string name="edt_ef_ano_inicio_texto">AÑO DE INICIO</string>
    <string name="edt_ef_ano_fin_texto">AÑO DE GRADUACIÓN</string>
    <string name="edt_ef_grado_texto">GRADO OBTENIDO</string>

    <string name="tv_ef_preferencias_text">ELIGE TUS PREFERENCIAS</string>
    <string name="tv_ef_hobbies_text">ELIGE TUS HOBBIES</string>
    <string name="cb_ef_peliculas_text">PELICULAS</string>
    <string name="cb_ef_videojuegos_text">VIDEOJUEGOS</string>
    <string name="cb_ef_deportes_text">DEPORTES</string>
    <string name="cb_ef_baile_text">BAILE</string>
    <string name="tv_ef_generos_musicales_text">ELIGE TUS GEENEROS MÚSICALES</string>

    <string name="bt_ef_guardar_text">GUARDAR</string>

    <string name="tv_calculadora_title_text">CALCULADORA</string>

    <string name="bt_n_0_text">0</string>
    <string name="bt_n_1_text">1</string>
    <string name="bt_n_2_text">2</string>
    <string name="bt_n_3_text">3</string>
    <string name="bt_n_4_text">4</string>
    <string name="bt_n_5_text">5</string>
    <string name="bt_n_6_text">6</string>
    <string name="bt_n_7_text">7</string>
    <string name="bt_n_8_text">8</string>
    <string name="bt_n_9_text">9</string>

    <string name="bt_mm_text">+/-</string>
    <string name="bt_dot_text">.</string>
    <string name="bt_equal_text">=</string>

    <string name="bt_sum_text">+</string>
    <string name="bt_rest_text">-</string>
    <string name="bt_mult_text">*</string>
    <string name="bt_div_text">/</string>

    <string name="bt_sqr_root_text">√X</string>
    <string name="bt_sqr_text">x²</string>
    <string name="bt_divided_x">(</string>

    <string name="bt_calc_back_text">←</string>
    <string name="bt_c_text">C</string>
    <string name="bt_ce_text">CE</string>
    <string name="bt_other_text">Back</string>

    <string name="opration_text">The Operation</string>

    <string name="history_title">HISTORY</string>

    <string name="is_tv_title_text">INICIO SESION</string>
    <string name="is_edt_usuario_text">USUARIO</string>
    <string name="is_edt_password_text">CONTRASEÑA</string>
    <string name="is_bt_sign_in_text">INICIAR</string>


    <string name="tv_luv_title">LISTA DE USUARIOS REGISTRADOS</string>

    <string name="cp_tv_title_text">CINE</string>
    <string name="cp_iv_1_content">SALA 1</string>
    <string name="cp_iv_2_content">SALA 2</string>
    <string name="cp_iv_3_content">SALA 3</string>
    <string name="cp_edt_sala_1_text">ENLACE DE LA IMAGEN 1</string>
    <string name="cp_edt_sala_2_text">ENLACE DE LA IMAGEN 2</string>
    <string name="cp_edt_sala_3_text">ENLACE DE LA IMAGEN 3</string>
    <string name="cp_bt_sala_1_text">ACTUALIZAR</string>
</resources>