<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/mv_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleX="1"
                android:gravity="center"
                android:textSize="35sp"
                android:text="@string/mv_tv_title_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/mv_bt_inisio_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="inicio_sesion"
                android:text="@string/mv_bt_inicio_sesion_text" />

            <Button
                android:id="@+id/bt_formularios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="formularios"
                android:text="@string/bt_formularios_text" />

            <Button
                android:id="@+id/bt_calculadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="calculadora"
                android:text="@string/bt_calculadora_text" />

            <Button
                android:id="@+id/mv_bt_cine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cine"
                android:text="@string/mv_bt_cine_text" />

            <Button
                android:id="@+id/bt_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="exit"
                android:text="@string/bt_salir_text" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>